# spwn-lsp

./: Cargo.toml  README.md  workspace.code-workspace
clients/: README.md
clients/code/: README.md  package.json
clients/code/client/src/: extension.ts
clients/code/syntaxes/: spwn.tmLanguage.json
src/: main.rs
