[package]
name = "spwn-lsp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lspower = "1.1.0"
tokio = {version = "1.10.0", features = ["macros", "rt-multi-thread", "io-std"], default-features = true}
lsp-types = "0.89.2"
serde_json = "1.0.66"
serde = "1.0.127"
log = "0.4.14"